--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,7 +7,7 @@
   <%= f.email_field :email %></div>
 
   <div><%= f.label :username %><br />
-  <%= f.email_field :username %></div>
+  <%= f.text_field :username %></div>
 
   <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
   <%= f.password_field :password %></div>
