--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,6 +6,8 @@
     = javascript_include_tag :defaults
     = csrf_meta_tag
   %body
+    - flash.each do |name, msg|
+      = content_tag :div, msg, :id => "flash_#{name}"
     #user_new
       - if user_signed_in?
         = "Signed in as #{current_user.email}. Not you?"
