added gem dynamic_form for errors,filled form.haml in task,added views new and show, fixed models user and project: belongs_to :user and :task

--- a/app/views/tasks/index.haml
+++ b/app/views/tasks/index.haml
@@ -5,7 +5,7 @@
       %td
         = task.project.name 
       %td
-        = truncate(task.desciption, :length => 80)
+        = truncate(task.description, :length => 80)
       %td
         = task.start_time.strftime("%H:%M")
       %td
