--- a/app/views/tasks/_form.haml
+++ b/app/views/tasks/_form.haml
@@ -8,7 +8,7 @@
 
   = f.label :description
   %br
-  = f.text_area :description
+  = f.text_area :description,:rows => 4, :cols => 50
   %br
 
   = f.label :start_time
