--- a/app/views/tasks/index.haml
+++ b/app/views/tasks/index.haml
@@ -5,12 +5,18 @@
       %td
         = task.project.name 
       %td
-        = truncate(task.description, :length => 80)
+        = truncate(task.description, :length => 60)
       %td
         = task.start_time.strftime("%H:%M")
       %td
         = task.end_time.strftime("%H:%M") 
       %td 
-        = task.external_link
+        = raw(auto_link(task.external_link))
+      %td.list_action
+        = link_to 'Show', task
+        %br
+        = link_to 'Edit', edit_task_path(task)
+        %br
+        = link_to 'Destroy', task, :confirm => 'Are you sure?', :method => :delete
 
 = link_to 'New Task', new_task_path
