modified view/tasks/_form: for start_time and end_time applied helper time_select; task_controller: added method destroy

--- a/app/views/tasks/_form.haml
+++ b/app/views/tasks/_form.haml
@@ -12,13 +12,11 @@
   %br
 
   = f.label :start_time
-  %br
-  = f.datetime_select(:start_time, :default => { :hour => 23, :minute => 59 })
+  = f.time_select(:start_time, :default => { :hour => 23, :minute => 59 })
   %br
   
   = f.label :end_time
-  %br
-  = f.datetime_select(:end_time, :default => { :hour => 23, :minute => 59 })
+  = f.time_select(:end_time, :default => { :hour => 23, :minute => 59 })
   %br
 
   = f.label :external_link
