--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -2,8 +2,8 @@
 %html
   %head
     %title TimeTracker
-    = stylesheet_link_tag :all
-    = javascript_include_tag :defaults
+    = stylesheet_link_tag :all, "jquery-ui-1.8.16.custom"
+    = javascript_include_tag :defaults, "jquery-ui-1.8.16.custom.min"
     = csrf_meta_tag
   %body
     - flash.each do |name, msg|
