--- a/app/views/tasks/index.haml
+++ b/app/views/tasks/index.haml
@@ -1,5 +1,6 @@
 %h1 Your tasks for today
 #calendar
+= @current_date
 %table
   - @tasks.each do |task|
     %tr
@@ -13,11 +14,12 @@
         = task.end_time.strftime("%H:%M") 
       %td 
         = raw(auto_link(task.external_link))
-      %td.list_action
-        = link_to 'Show', task
-        %br
-        = link_to 'Edit', edit_task_path(task)
-        %br
-        = link_to 'Destroy', task, :confirm => 'Are you sure?', :method => :delete
+      - if @current_date == Date.today
+        %td
+          = link_to 'Show', task
+          %br
+          = link_to 'Edit', edit_task_path(task)
+          %br
+          = link_to 'Destroy', task, :confirm => 'Are you sure?', :method => :delete
 
 = link_to 'New Task', new_task_path
