--- a/app/views/tasks/index.haml
+++ b/app/views/tasks/index.haml
@@ -20,7 +20,7 @@
     %tr
       - if current_user.admin
         %td
-          = task.project.user.username
+          = task.user.username
       %td
         = task.project.name 
       %td
