--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -3,7 +3,7 @@
   %head
     %title TimeTracker
     = stylesheet_link_tag :all, "jquery-ui-1.8.16.custom"
-    = javascript_include_tag :defaults, "jquery-ui-1.8.16.custom.min"
+    = javascript_include_tag :defaults, "jquery-ui-1.8.16.custom.min", "jquery.selectboxes.pack"
     = csrf_meta_tag
   %body
     - flash.each do |name, msg|
@@ -14,6 +14,4 @@
         = link_to "Sign out", destroy_user_session_path, :method => :delete
       - else
         = raw("#{link_to "Sign up", new_user_registration_path} or #{link_to "Sing in", new_user_session_path}")
-
-
     = yield
