--- a/app/views/tasks/index.haml
+++ b/app/views/tasks/index.haml
@@ -31,13 +31,11 @@
         = task.end_time.strftime("%H:%M") 
       %td 
         = raw(auto_link(task.external_link))
-      -# if @current_date == Date.today or current_user.admin
-      %td
-        = link_to 'Show', task
-        %br
-        = link_to 'Edit', edit_task_path(task)
-        %br
-        = link_to 'Destroy', task, :confirm => 'Are you sure?', :method => :delete
+      - if @current_date == Date.today or current_user.admin
+        %td
+          = link_to 'Edit', edit_task_path(task)
+          %br
+          = link_to 'Destroy', task, :confirm => 'Are you sure?', :method => :delete
 
 = link_to 'New Task', new_task_path
 
