--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -2,7 +2,10 @@
 %html
   %head
     %title TimeTracker
-    = stylesheet_link_tag :all, "jquery-ui-1.8.16.custom"
+    = stylesheet_link_tag 'time_tracker', "jquery-ui-1.8.16.custom"
+    = stylesheet_link_tag 'formtastic', 'my_formtastic_changes'
+    <!--[if IE 6]><%= stylesheet_link_tag 'formtastic_ie6' %><![endif]-->
+    <!--[if IE 7]><%= stylesheet_link_tag 'formtastic_ie7' %><![endif]-->
     = javascript_include_tag :defaults, "jquery-ui-1.8.16.custom.min", "jquery.selectboxes.pack"
     = csrf_meta_tag
   %body
