--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -7,6 +7,7 @@
     <!--[if IE 6]><%= stylesheet_link_tag 'formtastic_ie6' %><![endif]-->
     <!--[if IE 7]><%= stylesheet_link_tag 'formtastic_ie7' %><![endif]-->
     = javascript_include_tag :defaults, "jquery-ui-1.8.16.custom.min", "jquery.selectboxes.pack"
+    = yield :js
     = csrf_meta_tag
   %body
     - flash.each do |name, msg|
