added selected day in calendar, remove method js to view index

--- a/app/views/tasks/index.haml
+++ b/app/views/tasks/index.haml
@@ -43,4 +43,13 @@
   = will_paginate @tasks
   Number items on page:
   = select_tag "per_page", options_for_select([[3,3], [5,5], [10,10], ["all", 100000]], params[:per_page]), :onchange => "if(this.value){window.location=window.location.search.replace(/&per_page.*/, '') + '&per_page='+this.value;}"
-     
+
+:javascript
+  $(document).ready(function() {
+    $('#calendar').datepicker({
+      defaultDate: new Date('#{params[:date]}'),
+      onSelect: function(dataText){
+        window.location.href = "/?date=" + dataText;
+      }
+    });
+  });
