--- a/app/views/layouts/overlay.haml
+++ b/app/views/layouts/overlay.haml
@@ -7,15 +7,11 @@
     <!--[if IE 6]><%= stylesheet_link_tag 'compiled/formtastic_ie6.css' %><![endif]-->
     <!--[if IE 7]><%= stylesheet_link_tag 'compiled/formtastic_ie7.css' %><![endif]-->
     = javascript_include_tag :defaults, "jquery-ui-1.8.16.custom.min", "jquery.selectboxes.pack", 'jquery.tools.min'
+    - if current_user.admin
+      = javascript_include_tag 'initialize_datetimepicker', "jquery-ui-timepicker-addon" 
+    - else
+      = javascript_include_tag 'initialize_timepicker', "jquery.ui.timepicker"
     = yield :js
     = csrf_meta_tag
   %body
-    - flash.each do |name, msg|
-      = content_tag :div, msg, :id => "flash_#{name}"
-    #user_new
-      - if user_signed_in?
-        = "Signed in as #{current_user.email}. Not you?"
-        = button_to "Sign out", destroy_user_session_path, :method => :delete
-      - else
-        = raw("#{link_to "Sign up", sign_up_path} or #{link_to "Sing in", sign_in_path}")
     = yield
