--- a/app/views/tasks/_form.haml
+++ b/app/views/tasks/_form.haml
@@ -1,10 +1,4 @@
-- content_for :js do
-  - if current_user.admin
-    = javascript_include_tag 'initialize_datetimepicker', "jquery-ui-timepicker-addon" 
-  - else
-    = javascript_include_tag 'initialize_timepicker', "jquery.ui.timepicker"
-
-= form_for(@task) do |f|
+= form_for @task, :remote => true do |f|
   = f.error_messages
 
   - if current_user.admin
@@ -16,7 +10,7 @@
   = f.label :project_name
   %br
   - if current_user.admin
-    = f.select :project_id, ["add_project"] + Project.all.collect{|p| [p.name, p.id]}, {:prompt => 'Select a project'}, {:onchange => "add_project()"}
+    = f.select :project_id, ["add project"] + Project.all.collect{|p| [p.name, p.id]}, {:prompt => 'Select a project'}, {:onchange => "add_project()"}
   - else
     = f.select :project_id, ["add project"] + current_user.projects.collect{|p| [p.name, p.id]}, {:prompt => 'Select a project'}, {:onchange => "add_project()"}
   %br
@@ -41,3 +35,9 @@
   %br
 
   = f.submit "Save" 
+= javascript_tag do
+  - if current_user.admin
+    $('#task_start_time, #task_end_time').datetimepicker();
+  - else
+    $('#task_start_time, #task_end_time').timepicker()
+
