--- a/app/stylesheets/time_tracker.sass
+++ b/app/stylesheets/time_tracker.sass
@@ -9,3 +9,24 @@ th
     background: url(/images/down_arrow.gif) no-repeat 0 0
   a
     padding-left: 20px
+
+/* the overlayed element */
+.apple_overlay
+  display: none
+  background-color: #fff
+  width: 640px
+  padding: 35px
+  font-size: 11px
+
+/* default close button positioned on upper right corner */
+.apple_overlay .close 
+  background-image: url(/images/close.png)
+  position: absolute
+  right: 5px
+  top: 5px
+  cursor: pointer
+  height: 35px
+  width: 35px
+
+#ui-timepicker-div
+  z-index: 99999
