--- a/app/views/tasks/_form.haml
+++ b/app/views/tasks/_form.haml
@@ -1,10 +1,4 @@
-- content_for :js do
-  - if current_user.admin
-    = javascript_include_tag 'initialize_datetimepicker', "jquery-ui-timepicker-addon" 
-  - else
-    = javascript_include_tag 'initialize_timepicker', "jquery.ui.timepicker"
-
-= form_for(@task) do |f|
+= form_for @task, :remote => true do |f|
   = f.error_messages
 
   - if current_user.admin
@@ -40,4 +34,11 @@
   = f.text_field :external_link
   %br
 
-  = f.submit "Save" 
+  = f.submit "Save"
+
+= javascript_tag do
+  - if current_user.admin
+    $('#task_start_time, #task_end_time').datetimepicker()
+  - else
+    $('#task_start_time, #task_end_time').timepicker()
+
