--- a/app/views/tasks/index.haml
+++ b/app/views/tasks/index.haml
@@ -32,11 +32,14 @@
         = raw(auto_link(task.external_link))
       - if @current_date == Date.today or current_user.admin
         %td
-          = link_to 'Edit', edit_task_path(task)
+          = link_to 'Edit', edit_task_path(task), :rel=>"#overlay"
           %br
           = link_to 'Destroy', task, :confirm => 'Are you sure?', :method => :delete
 
-= link_to 'New Task', new_task_path
+= link_to 'New Task', new_task_path, :rel=>"#overlay"
+
+.apple_overlay#overlay
+  .contentWrap
 
 %p
   = will_paginate @tasks
