--- a/app/views/tasks/index.haml
+++ b/app/views/tasks/index.haml
@@ -34,9 +34,9 @@
         %td
           = link_to 'Edit', edit_task_path(task), :rel => "#overlay"
           %br
-          = button_to 'Destroy', task, :confirm => 'Are you sure?', :method => :delete
+          = link_to 'Destroy', task, :confirm => 'Are you sure?', :method => :delete
 
-= link_to 'New Task via overlay', new_task_path, :rel => "#overlay"
+= link_to 'New Task', new_task_path, :rel => "#overlay"
 .apple_overlay#overlay
   .contentWrap
 
