--- a/app/views/tasks/_form.haml
+++ b/app/views/tasks/_form.haml
@@ -9,10 +9,7 @@
 
   = f.label :project_name
   %br
-  - if current_user.admin
-    = f.select :project_id, ["add_project"] + Project.all.collect{|p| [p.name, p.id]}, {:prompt => 'Select a project'}, {:onchange => "add_project()"}
-  - else
-    = f.select :project_id, ["add project"] + current_user.projects.collect{|p| [p.name, p.id]}, {:prompt => 'Select a project'}, {:onchange => "add_project()"}
+  = f.select :project_id, ["add_project"] + (current_user.admin ? Project: current_user).all.collect{|p| [p.name, p.id]}, {:prompt => 'Select a project'}, {:onchange => "add_project()"}
   %br
 
   = f.label :description
