--- a/app/views/tasks/_form.haml
+++ b/app/views/tasks/_form.haml
@@ -9,7 +9,7 @@
 
   = f.label :project_name
   %br
-  = f.select :project_id, ["add_project"] + (current_user.admin ? Project: current_user).all.collect{|p| [p.name, p.id]}, {:prompt => 'Select a project'}, {:onchange => "add_project()"}
+  = f.select :project_id, ["add_project"] + Project.all.collect{|p| [p.name, p.id]}, {:prompt => 'Select a project'}, {:onchange => "add_project()"}
   .new_project.hide
     = text_field_tag 'new_project', '', :placeholder => "enter new project name"
   %br
