--- a/app/views/tasks/_form.haml
+++ b/app/views/tasks/_form.haml
@@ -9,7 +9,7 @@
 
   = f.label :project_name
   %br
-  = f.select :project_id, ["add_project"] + Project.all.collect{|p| [p.name, p.id]}, {:prompt => 'Select a project'}, {:onchange => "add_project()"}
+  = f.select :project_id, ["add_project"] + Project.all.sort_by{ |k| k['name']}.collect{|p| [p.name, p.id]}, {:prompt => 'Select a project'}, {:onchange => "add_project()"}
   
   .new_project.hide
     = f.fields_for :project do |project|
