added saving settings for per_page (per_page in session)

--- a/app/views/tasks/index.haml
+++ b/app/views/tasks/index.haml
@@ -52,7 +52,7 @@
   = will_paginate @tasks
   - unless @tasks.empty?
     Number items on page:
-    = select_tag "per_page", options_for_select([[3,3], [5,5], [10,10], ["all", 100000]], params[:per_page]), :onchange => "per_page(this.value)"
+    = select_tag "per_page", options_for_select([[3,3], [5,5], [10,10], ["all", 100000]], session[current_user.id][:per_page]), :onchange => "per_page(this.value)"
 
 :javascript
   $(document).ready(function() {
