--- a/app/views/reports/index.haml
+++ b/app/views/reports/index.haml
@@ -15,12 +15,13 @@
               %th "Spent time"
               %th
             - project.tasks.where(:start_time => DateTime.parse(params[:start_date])..DateTime.parse(params[:end_date]),:user_id => user).group(:task_name).select("tasks.*, SUM(TIME_TO_SEC(TIMEDIFF(end_time, start_time))) as spent_time").each do |task|
-              %tr
+              %tr{:id => "#{task.id}_#{task.user_id}_#{task.project_id}"}
                 %td
                   =task.task_name
                 %td
                   = Time.at(task.spent_time.to_i).utc.strftime("%H:%M")
                 %td
-                  = "picture"
+                  = link_to image_tag("down_arrow.gif"), details_tasks_path(:start_date => params[:start_date], :end_date => params[:end_date], :user_id => task.user_id, :project_id => task.project_id, :id => task.id, :task_name => task.task_name), :remote => true, :class => "link_to_ajax"
+                  = link_to_function image_tag("up_arrow.gif"), "$(\".#{task.id}_#{task.user_id}_#{task.project_id}_details\").remove(); $(\"##{task.id}_#{task.user_id}_#{task.project_id} a.link_to_func\").addClass('hide'); $(\"##{task.id}_#{task.user_id}_#{task.project_id} a.link_to_ajax\").removeClass('hide');", :class => "link_to_func hide"
 
 = link_to 'Back', :back
