added styles to page report

--- a/app/stylesheets/time_tracker.sass
+++ b/app/stylesheets/time_tracker.sass
@@ -33,3 +33,31 @@ th
 
 .hide
   display: none
+
+.report_project
+  font-weight: bold
+  font-size: 14pt
+  color: RGB(200, 00 , 16)
+
+.table_users
+  border: 1px solid black
+  width: 770px
+  margin-left: 5%
+
+.table_users_td_width
+  width: 70px
+  text-align: center
+
+.report_tasks
+  width: 100%
+  
+.report_tasks_td_task_name
+  width: 40%
+
+.report_tasks_td_time
+  width: 39%
+
+.report_tasks_td_ditails
+  background-color: RGB(249, 201, 16)
+
+
