--- a/app/views/tasks/index.haml
+++ b/app/views/tasks/index.haml
@@ -9,19 +9,19 @@
   %tr
     - if current_user.admin
       %th
-        = sortable "users.username", "Users", params[:date]
+        = sortable "users.username", "Users", params[:date], params[:per_page]
     %th
-      = sortable "projects.name",  "Projects", params[:date]
+      = sortable "projects.name",  "Projects", params[:date], params[:per_page]
     %th
-      = sortable "task_name",  "Task name", params[:date]
+      = sortable "task_name",  "Task name", params[:date], params[:per_page]
     %th
-      = sortable "description", "Description", params[:date]
+      = sortable "description", "Description", params[:date], params[:per_page]
     %th
-      = sortable "start_time", "Start time", params[:date]
+      = sortable "start_time", "Start time", params[:date], params[:per_page]
     %th
-      = sortable  "end_time", "Finish time", params[:date]
+      = sortable  "end_time", "Finish time", params[:date], params[:per_page]
     %th
-      = sortable "external_link", "External_link", params[:date]
+      = sortable "external_link", "External_link", params[:date], params[:per_page]
   - @tasks.each do |task|
     %tr
       - if current_user.admin
@@ -54,7 +54,7 @@
   = will_paginate @tasks
   - unless @tasks.empty?
     Number items on page:
-    = select_tag "per_page", options_for_select([[3,3], [5,5], [10,10], ["all", 100000]], params[:per_page]), :onchange => "per_page(this.value)"
+    = select_tag "per_page", options_for_select([[3,3], [5,5], [10,10], ["all", 100000]], params[:per_page]), :onchange => "per_page(this.value,'#{params[:direction]}','#{params[:sort]}')"
 
 
 :javascript
@@ -63,7 +63,7 @@
       firstDay: 1, 
       defaultDate: new Date('#{params[:date]}'),
       onSelect: function(dataText){
-        window.location.href = "/?date=" + dataText + "&per_page=#{params[:per_page]}";
+        window.location.href = "/?date=" + dataText + "&per_page=#{(params[:per_page]).nil? ? 3 : params[:per_page]}" + "&direction=#{params[:direction]}" + "&sort=#{params[:sort]}";
       }
     });
   });
