fixed bug with autocomplit in _form js in source

--- a/app/views/tasks/_form.haml
+++ b/app/views/tasks/_form.haml
@@ -55,6 +55,6 @@
 
   $(function() {
     $( "#task_task_name" ).autocomplete({
-      source: "tasks/task_name_list.js",
+      source: "/tasks/task_name_list.js",
     });
   });
