saving sort by colomns and direction after addition new task and after edition existing one

--- a/app/views/tasks/_form.haml
+++ b/app/views/tasks/_form.haml
@@ -45,6 +45,9 @@
 
   = button_to_function "Save", "$('#new_task').submit()"
 
+  = hidden_field_tag(:sort , params[:sort])
+  = hidden_field_tag(:direction, params[:direction])
+
 = javascript_tag do
   - if current_user.admin
     $('#task_start_time, #task_end_time').datetimepicker()
