--- a/app/views/tasks/_form.haml
+++ b/app/views/tasks/_form.haml
@@ -47,6 +47,7 @@
 
   = hidden_field_tag(:sort , params[:sort])
   = hidden_field_tag(:direction, params[:direction])
+  = hidden_field_tag(:per_page, params[:per_page])
 
 = javascript_tag do
   - if current_user.admin
