--- a/app/views/reports/index.haml
+++ b/app/views/reports/index.haml
@@ -4,9 +4,9 @@
 - Project.all.sort_by{ |k| k['name']}.each do |project|
   %div.report_project
     = project.name
-  - show_message = false
-  - unless  project.tasks.where(:start_time => DateTime.parse(params[:start_date])..DateTime.parse(params[:end_date])).empty?
-    - project.tasks.where(:start_time => DateTime.parse(params[:start_date])..DateTime.parse(params[:end_date])).group(:user_id).each do |task_user|
+  - tasks = project.tasks.where(:start_time => DateTime.parse(params[:start_date])..DateTime.parse(params[:end_date]))
+  - unless  tasks.empty?
+    - tasks.group(:user_id).each do |task_user|
       %table.table_users
         %tr
           %td.table_users_td_width
@@ -17,7 +17,7 @@
                 %th Task name
                 %th "Spent time"
                 %th
-              - project.tasks.where(:start_time => DateTime.parse(params[:start_date])..DateTime.parse(params[:end_date]),:user_id => task_user.user.id).group(:task_name).select("tasks.*, SUM(TIME_TO_SEC(TIMEDIFF(end_time, start_time))) as spent_time").each do |task|
+              - tasks.where(:user_id => task_user.user.id).group(:task_name).select("tasks.*, SUM(TIME_TO_SEC(TIMEDIFF(end_time, start_time))) as spent_time").each do |task|
                 %tr{:id => "#{task.id}_#{task.user_id}_#{task.project_id}"}
                   %td.report_tasks_td_task_name
                     =task.task_name
