added link 'Your_profile' to tasks/index.haml and some styles

--- a/app/stylesheets/time_tracker.sass
+++ b/app/stylesheets/time_tracker.sass
@@ -60,4 +60,10 @@ th
 .report_tasks_td_ditails
   background-color: RGB(249, 201, 16)
 
+#link_profile a
+  font-size: 14pt
+  color: #993300
+
+.profile h4
+  color: #cc6600
 
