--- a/app/views/tasks/index.haml
+++ b/app/views/tasks/index.haml
@@ -2,6 +2,9 @@
   %h4 Reports for week
   = raw show_weeks 
 
+#link_profile
+  = link_to 'Your profile', edit_user_registration_path
+
 %h2 Your tasks for today
 
 #calendar
