--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -23,8 +23,20 @@
   <div><%= f.submit "Update" %></div>
 <% end %>
 
-<h3>Cancel my account</h3>
 
+<div class="profile">
+  <h4>Aassociate profile</h4>
+</div>
+
+<a href="/auth/twitter" class="auth_provider">
+  <%= image_tag "/images/twitter.png", :size => "64x64", :alt => "Twitter" %></a>
+<a href="/auth/facebook" class="auth_provider">
+  <%= image_tag "/images/facebook.png", :size => "64x64", :alt => "Facebook" %></a>
+
+
+<div class="profile">
+  <h4>Cancel my account</h4>
+</div>
 <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>.</p>
 
 <%= link_to "Back", :back %>
