added method destroy to authentication, added scope twitter and facebook,added images twitter_del and facebook_del to edit_user, modified layouts flash notice, modified stilesheets

--- a/app/stylesheets/time_tracker.sass
+++ b/app/stylesheets/time_tracker.sass
@@ -64,6 +64,10 @@ th
   font-size: 14pt
   color: #993300
 
-.profile h4
+.orange_stile h4
   color: #cc6600
+
+#flash_notice
+  color: #cc6600
+  font-size: 10pt
 
